Java 9 deprecated uses