@@ -218,8 +218,8 @@ public class SubstanceRatioCalculationAlgorithm extends AbstractAlgorithm implem
 		// Double(0d));
 		// // AttributeHelper.setAttribute(ratioGraph, "", "node_plotOrientationHor",
 		// new Boolean(false));
-		AttributeHelper.setAttribute(ratioGraph, "", "node_gridWidth", new Double(3d));
-		AttributeHelper.setAttribute(ratioGraph, "", "node_axisWidth", new Double(3d));
+		AttributeHelper.setAttribute(ratioGraph, "", "node_gridWidth", Double.valueOf(3d));
+		AttributeHelper.setAttribute(ratioGraph, "", "node_axisWidth", Double.valueOf(3d));
 		AttributeHelper.setAttribute(ratioGraph, "", "node_plotAxisFontSize", Integer.valueOf(30));
 		AttributeHelper.setAttribute(ratioGraph, "", "node_showGridRange", new Boolean(true));
 		// AttributeHelper.setAttribute(ratioGraph, "", "node_showGridCategory", new
